Add new images and update agency listings
Added multiple new badge and logo images for agencies in Canada (NS, NB, ON, PEI), Belgium, Estonia, Iceland, and the USA. Updated NS.html, BE.html, EE.html, and ROW/MIL.html to reflect new agencies and improved layout. Removed outdated image references and added a new Florida state HTML page with detailed county and agency listings.

--- a/CAN/Provinces/NS.html
+++ b/CAN/Provinces/NS.html
@@ -22,21 +22,70 @@
 
 	<div class="row">
 		 
-		<div class="column2">
-			<!-- <a href="NS/Sheriff"> --><img src="NS/Sheriff/BADGE.png" height="200"><br>Nova Scotia Sheriff</a><br><br>
+		<div class="column5">
+			<img src="NS/Sheriff/BADGE.png" height="200"><br>Nova Scotia Sheriff Services<br></br>
+		</div>
+	
+		<div class="column5">
+			<img src="NS/CVE.png" height="200"><br>Nova Scotia Vehicle Compliance Enforcement<br></br>
+		</div>
+	
+		<div class="column5">
+			<img src="NS/Conservation.png" height="200"><br>Nova Scotia Conservation Enforcement<br></br>
+		</div>
+	
+		<div class="column5">
+			<img src="NS/ENV.png" height="200"><br>Nova Scotia Environmental Enforcement<br></br>
+		</div>
+	
+		<div class="column5">
+			<img src="NS/Corrections.png" height="200"><br>Nova Scotia Correctional Service<br></br>
 		</div>
 	
 	</div>
 	
 	<div class="row">
-
-		<div class="column"><a href="NS/e5a7171325.jpg"><img src="NS/e5a7171325.jpg" width="90%"></a></br>Nova Scotia</br>Motor Carrier Enforcement</br></br></div>
 		 
-		<div class="column"><a href="NS/142297ab5e.jpg"><img src="NS/142297ab5e.jpg" width="90%"></a></br>Nova Scotia</br>Emergency Health Services Supervisor
-		</br></br></div>
-
-		<div class="column"><a href="NS/f8da919d31.jpg"><img src="NS/f8da919d31.jpg" width="90%"></a></br>Stellarton Police</br></br></br></div>
-
+		<div class="column">
+			<img src="NS/Halifax/BADGE.png" height="200"><br>Halifax Regional Police<br></br>
+		</div>
+	
+		<div class="column">
+			<img src="NS/Cape Breton/BADGE.png" height="200"><br> 	Cape Breton - Sydney<br></br>
+		</div>
+	
+		<div class="column">
+			<img src="NS/Truro/BADGE.png" height="200"><br>Truro<br></br>
+		</div>
+	
+		<div class="column">
+			<img src="NS/Glasgow/BADGE.png" height="200"><br>New Glasgow<br></br>
+		</div>
+		
+		<div class="column">
+			<img src="NS/Kentville/BADGE.png" height="200"><br>Kentville<br></br>
+		</div>
+	
+		<div class="column">
+			<img src="NS/Amherst/BADGE.png" height="200"><br>Amherst<br></br>
+		</div>
+	
+		<div class="column4">
+			<img src="NS/Bridgewater/BADGE.png" height="200"><br>Bridgewater<br></br>
+		</div>
+		
+		<div class="column4">
+			<img src="NS/Stellarton/BADGE.png" height="200"><br>Stellarton<br></br>
+		</div>
+	
+		<div class="column4">
+			<img src="NS/Westville/BADGE.png" height="200"><br>Westville<br></br>
+		</div>
+	
+		<div class="column4">
+			<img src="NS/Annapolis/BADGE.png" height="200"><br>Annapolis Royal<br></br>
+		</div>
+	
 	</div>
 	
 </body>
