--- a/EU/EU/BE.html
+++ b/EU/EU/BE.html
@@ -6,12 +6,23 @@
     <title>Belgium</title>
   </head>
   <body>
-    <h1><img src="BE/SHIELD.png" height="175"></h1><h2>België / Belgique / Belgien</br><i>Belgium</i></h2>
+    <h1><img src="BE/SHIELD.png" height="175"></h1><h2>Koninkrijk België  / Royaume de Belgique  / Königreich Belgien </br><i>(Kingdom of Belgium)</i></h2>
+	<!-- Dutch / French / German -->
 
 	<div class="row">
+	
 		<div class="column">
-			<img src="FR/PN/BADGE.png" width="350"><br>Police nationale</br><i>(National Police)</i><br><br>
+			<img src="BE/Police/FED.png" height="200"><br>Federale Politie /Police Fédérale / Föderale Polizei</br><i>(Belgian Federal Police)</i><br><br>
 		</div>
+		
+		<div class="column">
+			<img src="BE/Police/LOCAL2.png" height="200"><br>Lokale Politie /Police Locale / Lokale Polizei</br><i>(Local Police)</i><br><br>
+		</div>
+		
+		<div class="column">
+			<img src="BE/Fire.png" height="200"><br>brandweer / service d'incendie / Feuerwehr</br><i>(Belgian Fire Services)</i><br><br>
+		</div>
+		
 	</div>
 
 </body>
