--- a/EU/EU/EE.html
+++ b/EU/EU/EE.html
@@ -10,7 +10,7 @@
 
 	<div class="row">
 		<div class="column">
-			<img src="FR/PN/BADGE.png" width="350"><br>Police nationale</br><i>(National Police)</i><br><br>
+			<img src="EE/BADGE.png" width="350"><br>Politsei- ja Piirivalveamet</br><i>(Police and Border Guard Board)</i><br><br>
 		</div>
 	</div>
 
