--- a/ROW/MIL.html
+++ b/ROW/MIL.html
@@ -262,6 +262,55 @@
 		<!-- </div> -->
 	
 	</div>
+	
+	<div class="row">
+	
+		<div class="column2"> <!-- Netherlands -->
+			<img src="../EU/EU/BE/FLAG.png" height="200"></br>
+				<div class="column45">
+					<img src="../EU/EU/BE/Defence/ARMS.png" height="150">
+					<br>Defensie / La Défense / Die Streitkräfte</br><i>(Belgian Armed Forces )</i></br>
+						<div class="column">
+							<img src="../EU/EU/BE/Defence/Army.png" height="100"><br>Landcomponent / Composante terre</br><i>(Land Component)</i></br>
+						</div>
+						<div class="column">
+							<img src="../EU/EU/BE/Defence/Navy.png" height="100"><br>Marinecomponent / Composante marine / Marinekomponente</br><i>(Navy Component)</i></br>
+							<!-- <div class="column0">
+								<img src="../EU/EU/BE/Defence/Marine.png" height="80"><br>Korps Mariniers</br><i>(Royal Netherlands Marine Corps)</i></br>
+							</div> -->
+						</div>
+						<div class="column">
+							<img src="../EU/EU/BE/Defence/Air Force.png" height="100"><br>Luchtmacht / Composante air</br><i>(Belgian Air and Space Component)</i></br>
+						</div>
+						
+					</div>
+				<div class="column5">
+					<img src="../EU/EU/BE/Defence/Coast.png" height="150"><br>Kustwacht Nederland</br><i>(Netherlands Coastguard)</i></br>
+				</div>
+			</div>
+			
+		<div class="column2"> <!-- Netherlands -->
+			<img src="../EU/EU/IT/FLAG.png" height="200"></br>
+				<!-- <div class="column45"> -->
+					<img src="../EU/EU/IT/Defence/Defence.png" height="150">
+					<br>Forze Armate Italiane</br><i>(Italian Armed Forces)</i></br>
+						<div class="column4">
+							<img src="../EU/EU/IT/Defence/Army.png" height="100"><br>Esercito Italiano</br><i>(Italian Army)</i></br>
+						</div>
+						<div class="column4">
+							<img src="../EU/EU/IT/Defence/Navy.png" height="100"><br>Marina Militare</br><i>(Italian Navy)</i></br>
+						</div>
+						<div class="column4">
+							<img src="../EU/EU/IT/Defence/Air Force.png" height="100"><br>Aeronautica Militare</br><i>(Italian Air Force)</i></br>
+						</div>
+						
+						<div class="column4">
+					<img src="../EU/EU/IT/Defence/Carabinieri.png" height="100"><br>Arma dei Carabinieri</br><i>(Carabinieri)</i></br>
+				</div>
+			</div>
+		<!-- </div> -->
+	
+	</div>
   
     <h1><img src="SCAN/ARMS.png"><br>Scandinavia</h1>
 
@@ -308,7 +357,17 @@
 			</div>
 		</div>
 	</div>
-		
+	
+		<div class="row">
+
+		<div class="column0"> <!--FINLAND-->
+			<img src="SCAN/IS/FLAG.png" height="200"></br>
+			<!-- <div class="column23"> -->
+			<img src="SCAN/IS/Defence/Coast.png" height="150"><br>Landhelgisgæsla Íslands</br><i>(Icelandic Coast Guard)</i></br>
+		</div>
+	
+	</div>
+	
 	<div class="row">
 
 		<div class="column2"> <!--FINLAND-->
@@ -345,6 +404,7 @@
 		</div>
 	</div></br>
 		
+			<img src="WarsawPact.png" height="200"></br>
 	<div class="row">
 		<div class="column2"> <!-- Russia -->
 			<img src="RU/FLAG.png" height="200"></br>
