--- a/USA/Transport/Port.html
+++ b/USA/Transport/Port.html
@@ -12,7 +12,7 @@
 	<div class="row">
 		 
 		<div class="column">
-			<!-- <a href="PORT/LAPP"> --><img src="PORT/LAPP/BADGE.png" height="200"><br>Los Ageles Port Police</br></a><br><br>
+			<!-- <a href="PORT/LAPP"> --><img src="PORT/LAPP/BADGE.png" height="200"><br>Los Angeles Port Police</br></a><br><br>
 		</div>
 		<div class="column">
 			<a href="PORT/PAPD.html"><img src="PORT/PAPD/BADGE.png" height="200"><br>Port Authority of New York</br>and New Jersey Police</a><br><br>
