--- a/USA/Transport/Transitb.html
+++ b/USA/Transport/Transitb.html
@@ -12,19 +12,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/AL.html"><img src="State/AL/FLAG.png" height="150"><br>Alabama</a><br><br>
+		<img src="State/AL/FLAG.png" height="150"><br>Alabama</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/HI.html"><img src="State/HI/FLAG.png" height="150"><br>Hawaii</a><br><br>
+		<img src="State/HI/FLAG.png" height="150"><br>Hawaii</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MA.html"><img src="State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
+		<img src="State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NM.html"><img src="State/NM/FLAG.png" height="150"><br>New Mexico</a><br><br>
+		<img src="State/NM/FLAG.png" height="150"><br>New Mexico</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/SD.html"><img src="State/SD/FLAG.png" height="150"><br>South Dakota</a><br><br>
+		<img src="State/SD/FLAG.png" height="150"><br>South Dakota</a><br><br>
 	</div>
 
 	</div>
@@ -33,19 +33,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/AK.html"><img src="State/AK/FLAG.png" height="150"><br>Alaska</a><br><br>
+		<img src="State/AK/FLAG.png" height="150"><br>Alaska</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/ID.html"><img src="State/ID/FLAG.png" height="150"><br>Idaho</a><br><br>
+		<img src="State/ID/FLAG.png" height="150"><br>Idaho</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MI.html"><img src="State/MI/FLAG.png" height="150"><br>Michigan</a><br><br>
+		<img src="State/MI/FLAG.png" height="150"><br>Michigan</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NY.html"><img src="State/NY/FLAG.png" height="150"><br>New York</a><br><br>
+		<img src="State/NY/FLAG.png" height="150"><br>New York</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/TN.html"><img src="State/TN/FLAG.png" height="150"><br>Tennessee</a><br><br>
+		<img src="State/TN/FLAG.png" height="150"><br>Tennessee</a><br><br>
 	</div>
 
 	</div>
@@ -54,19 +54,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/AZ.html"><img src="State/AZ/FLAG.png" height="150"><br>Arizona</a><br><br>
+		<img src="State/AZ/FLAG.png" height="150"><br>Arizona</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/IL.html"><img src="State/IL/FLAG.png" height="150"><br>Illinois</a><br><br>
+		<img src="State/IL/FLAG.png" height="150"><br>Illinois</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MN.html"><img src="State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>
+		<img src="State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NC.html"><img src="State/NC/FLAG.png" height="150"><br>North Carolina</a><br><br>
+		<img src="State/NC/FLAG.png" height="150"><br>North Carolina</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/TX.html"><img src="State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
+		<img src="State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
 	</div>
 
 	</div>
@@ -75,19 +75,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/AR.html"><img src="State/AR/FLAG.png" height="150"><br>Arkansas</a><br><br>
+		<img src="State/AR/FLAG.png" height="150"><br>Arkansas</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/IN.html"><img src="State/IN/FLAG.png" height="150"><br>Indiana</a><br><br>
+		<img src="State/IN/FLAG.png" height="150"><br>Indiana</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MS.html"><img src="State/MS/FLAG2.png" height="150"><br>Mississippi</a><br><br>
+		<img src="State/MS/FLAG2.png" height="150"><br>Mississippi</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/ND.html"><img src="State/ND/FLAG.png" height="150"><br>North Dakota</a><br><br>
+		<img src="State/ND/FLAG.png" height="150"><br>North Dakota</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/UT.html"><img src="State/UT/FLAG2.png" height="150"><br>Utah</a><br><br>
+		<img src="State/UT/FLAG2.png" height="150"><br>Utah</a><br><br>
 	</div>
 
 	</div>
@@ -96,19 +96,22 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/CA.html"><img src="State/CA/FLAG.png" height="150"><br>California</a><br><br>
+		<img src="State/CA/FLAG.png" height="150"><br>California</a><br><br>
+		<div class="column5">
+			<img src="State/CA/FLAG.png" height="150"><br>California</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
-		<a href="State/IA.html"><img src="State/IA/FLAG.png" height="150"><br>Iowa</a><br><br>
+		<img src="State/IA/FLAG.png" height="150"><br>Iowa</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MO.html"><img src="State/MO/FLAG.png" height="150"><br>Missouri</a><br><br>
+		<img src="State/MO/FLAG.png" height="150"><br>Missouri</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/OH.html"><img src="State/OH/FLAG.png" height="150"><br>Ohio</a><br><br>
+		<img src="State/OH/FLAG.png" height="150"><br>Ohio</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/VT.html"><img src="State/VT/FLAG.png" height="150"><br>Vermont</a><br><br>
+		<img src="State/VT/FLAG.png" height="150"><br>Vermont</a><br><br>
 	</div>
 
 	</div>
@@ -117,19 +120,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/CO.html"><img src="State/CO/FLAG.png" height="150"><br>Colorado</a><br><br>
+		<img src="State/CO/FLAG.png" height="150"><br>Colorado</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/KS.html"><img src="State/KS/FLAG.png" height="150"><br>Kansas</a><br><br>
+		<img src="State/KS/FLAG.png" height="150"><br>Kansas</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MT.html"><img src="State/MT/FLAG.png" height="150"><br>Montana</a><br><br>
+		<img src="State/MT/FLAG.png" height="150"><br>Montana</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/OK.html"><img src="State/OK/FLAG.png" height="150"><br>Oklahoma</a><br><br>
+		<img src="State/OK/FLAG.png" height="150"><br>Oklahoma</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/VA.html"><img src="State/VA/FLAG.png" height="150"><br>Virginia</a><br><br>
+		<img src="State/VA/FLAG.png" height="150"><br>Virginia</a><br><br>
 	</div>
 
 	</div>
@@ -138,19 +141,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/CT.html"><img src="State/CT/FLAG.png" height="150"><br>Connecticut</a><br><br>
+		<img src="State/CT/FLAG.png" height="150"><br>Connecticut</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/KY.html"><img src="State/KY/FLAG.png" height="150"><br>Kentucky</a><br><br>
+		<img src="State/KY/FLAG.png" height="150"><br>Kentucky</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NE.html"><img src="State/NE/FLAG.png" height="150"><br>Nebraska</a><br><br>
+		<img src="State/NE/FLAG.png" height="150"><br>Nebraska</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/OR.html"><img src="State/OR/FLAG.png" height="150"><br>Oregon</a><br><br>
+		<img src="State/OR/FLAG.png" height="150"><br>Oregon</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/WA.html"><img src="State/WA/FLAG.png" height="150"><br>Washington</a><br><br>
+		<img src="State/WA/FLAG.png" height="150"><br>Washington</a><br><br>
 	</div>
 
 	</div>
@@ -159,19 +162,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/DE.html"><img src="State/DE/FLAG.png" height="150"><br>Delaware</a><br><br>
+		<img src="State/DE/FLAG.png" height="150"><br>Delaware</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/LA.html"><img src="State/LA/FLAG.png" height="150"><br>Louisiana</a><br><br>
+		<img src="State/LA/FLAG.png" height="150"><br>Louisiana</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NV.html"><img src="State/NV/FLAG.png" height="150"><br>Nevada</a><br><br>
+		<img src="State/NV/FLAG.png" height="150"><br>Nevada</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/PA.html"><img src="State/PA/FLAG.png" height="150"><br>Pennsylvania</a><br><br>
+		<img src="State/PA/FLAG.png" height="150"><br>Pennsylvania</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/WV.html"><img src="State/WV/FLAG.png" height="150"><br>West Virginia</a><br><br>
+		<img src="State/WV/FLAG.png" height="150"><br>West Virginia</a><br><br>
 	</div>
 
 	</div>
@@ -180,19 +183,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/FL.html"><img src="State/FL/FLAG.png" height="150"><br>Florida</a><br><br>
+		<img src="State/FL/FLAG.png" height="150"><br>Florida</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/ME.html"><img src="State/ME/FLAG.png" height="150"><br>Maine</a><br><br>
+		<img src="State/ME/FLAG.png" height="150"><br>Maine</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NH.html"><img src="State/NH/FLAG.png" height="150"><br>New Hampshire</a><br><br>
+		<img src="State/NH/FLAG.png" height="150"><br>New Hampshire</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/RI.html"><img src="State/RI/FLAG.png" height="150"><br>Rhode Island</a><br><br>
+		<img src="State/RI/FLAG.png" height="150"><br>Rhode Island</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/WI.html"><img src="State/WI/FLAG.png" height="150"><br>Wisconsin</a><br><br>
+		<img src="State/WI/FLAG.png" height="150"><br>Wisconsin</a><br><br>
 	</div>
 
 	</div>
@@ -201,26 +204,26 @@
 	<div class="row">
 
 	<div class="column5">
-		<a href="State/GA.html"><img src="State/GA/FLAG.png" height="150"><br>Georgia</a><br><br>
+		<img src="State/GA/FLAG.png" height="150"><br>Georgia</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/MD.html"><img src="State/MD/FLAG.png" height="150"><br>Maryland</a><br><br>
+		<img src="State/MD/FLAG.png" height="150"><br>Maryland</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/NJ.html"><img src="State/NJ/FLAG.png" height="150"><br>New Jersey</a><br><br>
+		<img src="State/NJ/FLAG.png" height="150"><br>New Jersey</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/SC.html"><img src="State/SC/FLAG.png" height="150"><br>South Carolina</a><br><br>
+		<img src="State/SC/FLAG.png" height="150"><br>South Carolina</a><br><br>
 	</div>
 	<div class="column5">
-		<a href="State/WY.html"><img src="State/WY/FLAG.png" height="150"><br>Wyoming</a><br><br>
+		<img src="State/WY/FLAG.png" height="150"><br>Wyoming</a><br><br>
 	</div>
 
 	</div>
 
 	<div class="row">
 	<div class="column5">
-		<!-- <a href="State/DC.html"><img src="State/DC/FLAG.png" height="150"><br>Washington D.C.</a><br><br> -->
+		<img src="State/DC/FLAG.png" height="150"><br>Washington D.C.</a><br><br>
 	</div>
 	</div>
 
