--- a/USA/Transport/Transitb.html
+++ b/USA/Transport/Transitb.html
@@ -19,6 +19,9 @@
 	</div>
 	<div class="column5">
 		<img src="State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/MA/MBTA.png" height="150"><br>MBTA</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
 		<img src="State/NM/FLAG.png" height="150"><br>New Mexico</a><br><br>
@@ -58,15 +61,27 @@
 	</div>
 	<div class="column5">
 		<img src="State/IL/FLAG.png" height="150"><br>Illinois</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/IL/METRA.png" height="150"><br>METRA</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
-		<img src="State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>
+		<img src="State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>		
+		<div class="column2">
+			<img src="Transport/Transit/MN/METRO.png" height="150"><br>METRO</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
 		<img src="State/NC/FLAG.png" height="150"><br>North Carolina</a><br><br>
 	</div>
 	<div class="column5">
 		<img src="State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/TX/DART.png" height="150"><br>DART</a><br><br>
+		</div>
+		<div class="column2">
+			<img src="Transport/Transit/TX/METRO.png" height="150"><br>METRO</a><br><br>
+		</div>
 	</div>
 
 	</div>
@@ -97,8 +112,8 @@
 
 	<div class="column5">
 		<img src="State/CA/FLAG.png" height="150"><br>California</a><br><br>
-		<div class="column5">
-			<img src="State/CA/FLAG.png" height="150"><br>California</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/CA/BART.png" height="150"><br>BART</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -109,6 +124,9 @@
 	</div>
 	<div class="column5">
 		<img src="State/OH/FLAG.png" height="150"><br>Ohio</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/OH/RTA.png" height="150"><br>RTA</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
 		<img src="State/VT/FLAG.png" height="150"><br>Vermont</a><br><br>
@@ -172,6 +190,9 @@
 	</div>
 	<div class="column5">
 		<img src="State/PA/FLAG.png" height="150"><br>Pennsylvania</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/PA/SEPTA.png" height="150"><br>SEPTA</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
 		<img src="State/WV/FLAG.png" height="150"><br>West Virginia</a><br><br>
@@ -208,9 +229,18 @@
 	</div>
 	<div class="column5">
 		<img src="State/MD/FLAG.png" height="150"><br>Maryland</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/MD/MDTA.png" height="150"><br>MDTA</a><br><br>
+		</div>		
+		<div class="column2">
+			<img src="Transport/Transit/MD/MDTA2.png" height="150"><br>MDTA2</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
 		<img src="State/NJ/FLAG.png" height="150"><br>New Jersey</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/NJ/BADGE.png" height="150"><br>NJTP</a><br><br>
+		</div>
 	</div>
 	<div class="column5">
 		<img src="State/SC/FLAG.png" height="150"><br>South Carolina</a><br><br>
@@ -224,6 +254,9 @@
 	<div class="row">
 	<div class="column5">
 		<img src="State/DC/FLAG.png" height="150"><br>Washington D.C.</a><br><br>
+		<div class="column2">
+			<img src="Transport/Transit/DC/WMATA/BADGE.png" height="150"><br>WMATA</a><br><br>
+		</div>
 	</div>
 	</div>
 
