--- a/USA/Transport/Transitb.html
+++ b/USA/Transport/Transitb.html
@@ -12,22 +12,22 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/AL/FLAG.png" height="150"><br>Alabama</a><br><br>
+		<img src="../State/AL/FLAG.png" height="150"><br>Alabama</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/HI/FLAG.png" height="150"><br>Hawaii</a><br><br>
+		<img src="../State/HI/FLAG.png" height="150"><br>Hawaii</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
+		<img src="../State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/MA/MBTA.png" height="150"><br>MBTA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/NM/FLAG.png" height="150"><br>New Mexico</a><br><br>
+		<img src="../State/NM/FLAG.png" height="150"><br>New Mexico</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/SD/FLAG.png" height="150"><br>South Dakota</a><br><br>
+		<img src="../State/SD/FLAG.png" height="150"><br>South Dakota</a><br><br>
 	</div>
 
 	</div>
@@ -36,19 +36,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/AK/FLAG.png" height="150"><br>Alaska</a><br><br>
+		<img src="../State/AK/FLAG.png" height="150"><br>Alaska</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/ID/FLAG.png" height="150"><br>Idaho</a><br><br>
+		<img src="../State/ID/FLAG.png" height="150"><br>Idaho</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/MI/FLAG.png" height="150"><br>Michigan</a><br><br>
+		<img src="../State/MI/FLAG.png" height="150"><br>Michigan</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/NY/FLAG.png" height="150"><br>New York</a><br><br>
+		<img src="../State/NY/FLAG.png" height="150"><br>New York</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/TN/FLAG.png" height="150"><br>Tennessee</a><br><br>
+		<img src="../State/TN/FLAG.png" height="150"><br>Tennessee</a><br><br>
 	</div>
 
 	</div>
@@ -57,25 +57,25 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/AZ/FLAG.png" height="150"><br>Arizona</a><br><br>
+		<img src="../State/AZ/FLAG.png" height="150"><br>Arizona</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/IL/FLAG.png" height="150"><br>Illinois</a><br><br>
+		<img src="../State/IL/FLAG.png" height="150"><br>Illinois</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/IL/METRA.png" height="150"><br>METRA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>		
+		<img src="../State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>		
 		<div class="column2">
 			<img src="Transport/Transit/MN/METRO.png" height="150"><br>METRO</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/NC/FLAG.png" height="150"><br>North Carolina</a><br><br>
+		<img src="../State/NC/FLAG.png" height="150"><br>North Carolina</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
+		<img src="../State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/TX/DART.png" height="150"><br>DART</a><br><br>
 		</div>
@@ -90,19 +90,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/AR/FLAG.png" height="150"><br>Arkansas</a><br><br>
+		<img src="../State/AR/FLAG.png" height="150"><br>Arkansas</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/IN/FLAG.png" height="150"><br>Indiana</a><br><br>
+		<img src="../State/IN/FLAG.png" height="150"><br>Indiana</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/MS/FLAG2.png" height="150"><br>Mississippi</a><br><br>
+		<img src="../State/MS/FLAG2.png" height="150"><br>Mississippi</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/ND/FLAG.png" height="150"><br>North Dakota</a><br><br>
+		<img src="../State/ND/FLAG.png" height="150"><br>North Dakota</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/UT/FLAG2.png" height="150"><br>Utah</a><br><br>
+		<img src="../State/UT/FLAG2.png" height="150"><br>Utah</a><br><br>
 	</div>
 
 	</div>
@@ -111,25 +111,25 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/CA/FLAG.png" height="150"><br>California</a><br><br>
+		<img src="../State/CA/FLAG.png" height="150"><br>California</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/CA/BART.png" height="150"><br>BART</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/IA/FLAG.png" height="150"><br>Iowa</a><br><br>
+		<img src="../State/IA/FLAG.png" height="150"><br>Iowa</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/MO/FLAG.png" height="150"><br>Missouri</a><br><br>
+		<img src="../State/MO/FLAG.png" height="150"><br>Missouri</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/OH/FLAG.png" height="150"><br>Ohio</a><br><br>
+		<img src="../State/OH/FLAG.png" height="150"><br>Ohio</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/OH/RTA.png" height="150"><br>RTA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/VT/FLAG.png" height="150"><br>Vermont</a><br><br>
+		<img src="../State/VT/FLAG.png" height="150"><br>Vermont</a><br><br>
 	</div>
 
 	</div>
@@ -138,19 +138,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/CO/FLAG.png" height="150"><br>Colorado</a><br><br>
+		<img src="../State/CO/FLAG.png" height="150"><br>Colorado</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/KS/FLAG.png" height="150"><br>Kansas</a><br><br>
+		<img src="../State/KS/FLAG.png" height="150"><br>Kansas</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/MT/FLAG.png" height="150"><br>Montana</a><br><br>
+		<img src="../State/MT/FLAG.png" height="150"><br>Montana</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/OK/FLAG.png" height="150"><br>Oklahoma</a><br><br>
+		<img src="../State/OK/FLAG.png" height="150"><br>Oklahoma</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/VA/FLAG.png" height="150"><br>Virginia</a><br><br>
+		<img src="../State/VA/FLAG.png" height="150"><br>Virginia</a><br><br>
 	</div>
 
 	</div>
@@ -159,19 +159,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/CT/FLAG.png" height="150"><br>Connecticut</a><br><br>
+		<img src="../State/CT/FLAG.png" height="150"><br>Connecticut</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/KY/FLAG.png" height="150"><br>Kentucky</a><br><br>
+		<img src="../State/KY/FLAG.png" height="150"><br>Kentucky</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/NE/FLAG.png" height="150"><br>Nebraska</a><br><br>
+		<img src="../State/NE/FLAG.png" height="150"><br>Nebraska</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/OR/FLAG.png" height="150"><br>Oregon</a><br><br>
+		<img src="../State/OR/FLAG.png" height="150"><br>Oregon</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/WA/FLAG.png" height="150"><br>Washington</a><br><br>
+		<img src="../State/WA/FLAG.png" height="150"><br>Washington</a><br><br>
 	</div>
 
 	</div>
@@ -180,22 +180,22 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/DE/FLAG.png" height="150"><br>Delaware</a><br><br>
+		<img src="../State/DE/FLAG.png" height="150"><br>Delaware</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/LA/FLAG.png" height="150"><br>Louisiana</a><br><br>
+		<img src="../State/LA/FLAG.png" height="150"><br>Louisiana</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/NV/FLAG.png" height="150"><br>Nevada</a><br><br>
+		<img src="../State/NV/FLAG.png" height="150"><br>Nevada</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/PA/FLAG.png" height="150"><br>Pennsylvania</a><br><br>
+		<img src="../State/PA/FLAG.png" height="150"><br>Pennsylvania</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/PA/SEPTA.png" height="150"><br>SEPTA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/WV/FLAG.png" height="150"><br>West Virginia</a><br><br>
+		<img src="../State/WV/FLAG.png" height="150"><br>West Virginia</a><br><br>
 	</div>
 
 	</div>
@@ -204,19 +204,19 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/FL/FLAG.png" height="150"><br>Florida</a><br><br>
+		<img src="../State/FL/FLAG.png" height="150"><br>Florida</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/ME/FLAG.png" height="150"><br>Maine</a><br><br>
+		<img src="../State/ME/FLAG.png" height="150"><br>Maine</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/NH/FLAG.png" height="150"><br>New Hampshire</a><br><br>
+		<img src="../State/NH/FLAG.png" height="150"><br>New Hampshire</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/RI/FLAG.png" height="150"><br>Rhode Island</a><br><br>
+		<img src="../State/RI/FLAG.png" height="150"><br>Rhode Island</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/WI/FLAG.png" height="150"><br>Wisconsin</a><br><br>
+		<img src="../State/WI/FLAG.png" height="150"><br>Wisconsin</a><br><br>
 	</div>
 
 	</div>
@@ -225,10 +225,10 @@
 	<div class="row">
 
 	<div class="column5">
-		<img src="State/GA/FLAG.png" height="150"><br>Georgia</a><br><br>
+		<img src="../State/GA/FLAG.png" height="150"><br>Georgia</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/MD/FLAG.png" height="150"><br>Maryland</a><br><br>
+		<img src="../State/MD/FLAG.png" height="150"><br>Maryland</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/MD/MDTA.png" height="150"><br>MDTA</a><br><br>
 		</div>		
@@ -237,23 +237,23 @@
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/NJ/FLAG.png" height="150"><br>New Jersey</a><br><br>
+		<img src="../State/NJ/FLAG.png" height="150"><br>New Jersey</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/NJ/BADGE.png" height="150"><br>NJTP</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
-		<img src="State/SC/FLAG.png" height="150"><br>South Carolina</a><br><br>
+		<img src="../State/SC/FLAG.png" height="150"><br>South Carolina</a><br><br>
 	</div>
 	<div class="column5">
-		<img src="State/WY/FLAG.png" height="150"><br>Wyoming</a><br><br>
+		<img src="../State/WY/FLAG.png" height="150"><br>Wyoming</a><br><br>
 	</div>
 
 	</div>
 
 	<div class="row">
 	<div class="column5">
-		<img src="State/DC/FLAG.png" height="150"><br>Washington D.C.</a><br><br>
+		<img src="../State/DC/FLAG.png" height="150"><br>Washington D.C.</a><br><br>
 		<div class="column2">
 			<img src="Transport/Transit/DC/WMATA/BADGE.png" height="150"><br>WMATA</a><br><br>
 		</div>
