--- a/USA/Transport/Transitb.html
+++ b/USA/Transport/Transitb.html
@@ -20,7 +20,7 @@
 	<div class="column5">
 		<img src="../State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/MA/MBTA.png" height="150"><br>MBTA</a><br><br>
+			<img src="Transit/MA/MBTA.png" height="150"><br>MBTA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -62,13 +62,13 @@
 	<div class="column5">
 		<img src="../State/IL/FLAG.png" height="150"><br>Illinois</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/IL/METRA.png" height="150"><br>METRA</a><br><br>
+			<img src="Transit/IL/METRA.png" height="150"><br>METRA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
 		<img src="../State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>		
 		<div class="column2">
-			<img src="Transport/Transit/MN/METRO.png" height="150"><br>METRO</a><br><br>
+			<img src="Transit/MN/METRO.png" height="150"><br>METRO</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -77,10 +77,10 @@
 	<div class="column5">
 		<img src="../State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/TX/DART.png" height="150"><br>DART</a><br><br>
+			<img src="Transit/TX/DART.png" height="150"><br>DART</a><br><br>
 		</div>
 		<div class="column2">
-			<img src="Transport/Transit/TX/METRO.png" height="150"><br>METRO</a><br><br>
+			<img src="Transit/TX/METRO.png" height="150"><br>METRO</a><br><br>
 		</div>
 	</div>
 
@@ -113,7 +113,7 @@
 	<div class="column5">
 		<img src="../State/CA/FLAG.png" height="150"><br>California</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/CA/BART.png" height="150"><br>BART</a><br><br>
+			<img src="Transit/CA/BART.png" height="150"><br>BART</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -125,7 +125,7 @@
 	<div class="column5">
 		<img src="../State/OH/FLAG.png" height="150"><br>Ohio</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/OH/RTA.png" height="150"><br>RTA</a><br><br>
+			<img src="Transit/OH/RTA.png" height="150"><br>RTA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -191,7 +191,7 @@
 	<div class="column5">
 		<img src="../State/PA/FLAG.png" height="150"><br>Pennsylvania</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/PA/SEPTA.png" height="150"><br>SEPTA</a><br><br>
+			<img src="Transit/PA/SEPTA.png" height="150"><br>SEPTA</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -230,16 +230,16 @@
 	<div class="column5">
 		<img src="../State/MD/FLAG.png" height="150"><br>Maryland</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/MD/MDTA.png" height="150"><br>MDTA</a><br><br>
+			<img src="Transit/MD/MDTA.png" height="150"><br>MDTA</a><br><br>
 		</div>		
 		<div class="column2">
-			<img src="Transport/Transit/MD/MDTA2.png" height="150"><br>MDTA2</a><br><br>
+			<img src="Transit/MD/MDTA2.png" height="150"><br>MDTA2</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
 		<img src="../State/NJ/FLAG.png" height="150"><br>New Jersey</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/NJ/BADGE.png" height="150"><br>NJTP</a><br><br>
+			<img src="Transit/NJ/BADGE.png" height="150"><br>NJTP</a><br><br>
 		</div>
 	</div>
 	<div class="column5">
@@ -255,7 +255,7 @@
 	<div class="column5">
 		<img src="../State/DC/FLAG.png" height="150"><br>Washington D.C.</a><br><br>
 		<div class="column2">
-			<img src="Transport/Transit/DC/WMATA/BADGE.png" height="150"><br>WMATA</a><br><br>
+			<img src="Transit/DC/WMATA/BADGE.png" height="150"><br>WMATA</a><br><br>
 		</div>
 	</div>
 	</div>
