USAFED Folder adjustments
Moved INT stuff to INT

--- a/USA/FED/INT/BIA.html
+++ b/USA/FED/INT/BIA.html
@@ -10,10 +10,9 @@
 		<div class="column"><a href="../../FED.html">BACK to US Federal Agencies</a></div>
 		
 		<div class="column">    
-		<h1><img src="BIA/MBADGE.png" height="300"></h1>
+		<h1><img src="BIA/BADGE2.png" height="300"></h1>
 		<h2>Bureau of Indian Affairs</h2>
-			<!-- <h3>and other Tribal Police</h3> -->
-			<p>and other Tribal Police</p>
+			<h3>Office of Justice Services and other Tribal Police</h3>
 		</div>
 		
 	</div>
@@ -23,25 +22,19 @@
 
 	<div class="row">
 		 
-		<div class="column"><a href="BIA/7ea5977316.jpg"><img src="BIA/7ea5977316.jpg" width="90%"></a></br></div>
-		
 		<div class="column"><a href="BIA/3ebae29b07.jpg"><img src="BIA/3ebae29b07.jpg" width="90%"></a></br></div>
+		
+		<div class="column"><a href="BIA/5d6c4b05e9.jpg"><img src="BIA/5d6c4b05e9.jpg" width="90%"></a></br></div>
 
 		<div class="column"><a href="BIA/5e3815e25d2629b7003d05100480e160.jpg"><img src="BIA/5e3815e25d2629b7003d05100480e160.jpg" width="90%"></a></br></div>
 
 	</div> </br>
 	
 	<div class="row">
-		
-		<div class="column"><a href="BIA/indian126.jpg"><img src="BIA/indian126.jpg" width="90%"></a></br></div>
-
-		<div class="column"><a href="BIA/5d6c4b05e9.jpg"><img src="BIA/5d6c4b05e9.jpg" width="90%"></a></br></div>
-	
-	<!-- </div> </br> -->
-	
-	<!-- <div class="row"> -->
-		
-		<div class="column"><a href="BIA/0b18085480.jpg"><img src="BIA/0b18085480.jpg" width="90%"></a></br></div>
+				
+		<div class="column2"><a href="BIA/0b18085480.jpg"><img src="BIA/0b18085480.jpg" width="90%"></a></br></div>
+			
+		<div class="column2"><a href="BIA/98b359ebcbc8ad8f.jpg"><img src="BIA/98b359ebcbc8ad8f.jpg" width="90%"></a></br></div>
 		
 	</div> 
 </body>
