--- a/USA/FED/INT/BLM.html
+++ b/USA/FED/INT/BLM.html
@@ -11,9 +11,9 @@
 		
 		<div class="column">
 		<h1>
-		<img src="../Park/BLM/blmrangertruck.jpg" height="300">
-		<!-- <div class="column2"><img src="../Park/BLM/blmrangertruck.jpg" height="300"></div>
-		<div class="column2"><img src="../Park/BLM/MBADGE.png" height="300"></div> -->
+		<img src="BLM/MBADGE.png" height="300">
+		<!-- <div class="column2"><img src="BLM/blmrangertruck.jpg" height="300"></div>
+		<div class="column2"><img src="BLM/MBADGE.png" height="300"></div> -->
 		</h1>	
 			<h2>Bureau of Land Management Rangers</h2>
 		</div>
@@ -28,22 +28,26 @@
 
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/BLM/9d0955ef25.jpg"><img src="../Park/BLM/9d0955ef25.jpg" width="90%"></a></br></div>
+		<div class="column4"><a href="BLM/9d0955ef25.jpg"><img src="BLM/9d0955ef25.jpg" width="90%"></a></br></div>
 		
-		<div class="column"><a href="../Park/BLM/blm-rescue-buggy-blm-photo-samantha-storms-2016.jpg"><img src="../Park/BLM/blm-rescue-buggy-blm-photo-samantha-storms-2016.jpg" width="90%"></a></br></div>
+		<div class="column4"><a href="BLM/2ff209df08.jpg"><img src="BLM/2ff209df08.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/BLM/blm125.jpg"><img src="../Park/BLM/blm125.jpg" width="90%"></a></br></div>
+		<div class="column4"><a href="BLM/blm125.jpg"><img src="BLM/blm125.jpg" width="90%"></a></br></div>
+		
+		<div class="column4"><a href="BLM/no76s3O7Rm1rcc3hoo5.jpg"><img src="BLM/no76s3O7Rm1rcc3hoo5.jpg" width="90%"></a></br></div>
+
 
 	</div> </br>
+		
+		<h2>Bureau of Land Management Fire Management</h2>
 
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/BLM/904689983122084069.jpg"><img src="../Park/BLM/904689983122084069.jpg" width="90%"></a></br></div>
+		<div class="column2"><a href="BLM/blm-rescue-buggy-blm-photo-samantha-storms-2016.jpg"><img src="BLM/blm-rescue-buggy-blm-photo-samantha-storms-2016.jpg" width="90%"></a></br></div>
 		
-		<div class="column"><a href="../Park/BLM/2ff209df08.jpg"><img src="../Park/BLM/2ff209df08.jpg" width="90%"></a></br></div>
+		<div class="column2"><a href="BLM/22442333819.jpg"><img src="BLM/22442333819.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/BLM/no76s3O7Rm1rcc3hoo5.jpg"><img src="../Park/BLM/no76s3O7Rm1rcc3hoo5.jpg" width="90%"></a></br></div>
-
+		
 	</div>
 
 </body>
