--- a/USA/FED/INT/NPS.html
+++ b/USA/FED/INT/NPS.html
@@ -14,28 +14,34 @@
   </head>
   <body>
 	
-	<h1><img src="../Park/NPS/274a5ced08.jpg" height="300"></h1>
+	<h1><img src="NPS/MBADGE2.png" height="300"></h1>
 		<h2>National Park Service Rangers</h2>
 
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/NPS/d933709493.jpg"><img src="../Park/NPS/d933709493.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="NPS/d933709493.jpg"><img src="NPS/d933709493.jpg" width="90%"></a></br></div>
 		
-		<div class="column"><a href="../Park/NPS/624f2df03f.jpg"><img src="../Park/NPS/624f2df03f.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="NPS/624f2df03f.jpg"><img src="NPS/624f2df03f.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/NPS/672711e076.jpg"><img src="../Park/NPS/672711e076.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="NPS/672711e076.jpg"><img src="NPS/672711e076.jpg" width="90%"></a></br></div>
 
 	</div> </br>
 
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/NPS/822bd0ce14.jpg"><img src="../Park/NPS/822bd0ce14.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="NPS/822bd0ce14.jpg"><img src="NPS/822bd0ce14.jpg" width="90%"></a></br></div>
 		
-		<div class="column"><a href="../Park/NPS/12a7780159.jpg"><img src="../Park/NPS/12a7780159.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="NPS/12a7780159.jpg"><img src="NPS/12a7780159.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/NPS/20c23dd0f5.jpg"><img src="../Park/NPS/20c23dd0f5.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="NPS/20c23dd0f5.jpg"><img src="NPS/20c23dd0f5.jpg" width="90%"></a></br></div>
 
-	</div>
+	</div>	
+	
+		<h2>National Park Service Fire</h2>
+		
+		<a href="NPS/1ab740d6f578c0c2.jpg"><img src="NPS/1ab740d6f578c0c2.jpg" width="90%"></a></br>
+		
+		
 
 </body>
 </html>
