--- a/USA/FED/INT/USFWS.html
+++ b/USA/FED/INT/USFWS.html
@@ -8,7 +8,7 @@
 	<div class="row">
 		<div class="column"><a href="../INT.html">BACK to Department of the Interior</a></div>
 		<div class="column">
-		<h1><img src="../Park/USFWS/191024-F-ZH169-1119.jpg" height="300"></h1><h2>United States Fish and Wildlife Service</h2>
+		<h1><img src="USFWS/MBADGE2.png" height="300"></h1><h2>United States Fish and Wildlife Service</h2>
 		</div>
 		<div class="column"><a href="../../FED.html">BACK to US Federal Agencies</a></div>	
 	</div>
@@ -20,11 +20,11 @@
 	
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/USFWS/dbc16c8cdb.jpg"><img src="../Park/USFWS/dbc16c8cdb.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USFWS/dbc16c8cdb.jpg"><img src="USFWS/dbc16c8cdb.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/USFWS/ac784d29f1.jpg"><img src="../Park/USFWS/ac784d29f1.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USFWS/ac784d29f1.jpg"><img src="USFWS/ac784d29f1.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/USFWS/3f799ecbc3.jpg"><img src="../Park/USFWS/3f799ecbc3.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USFWS/3f799ecbc3.jpg"><img src="USFWS/3f799ecbc3.jpg" width="90%"></a></br></div>
 	</div>
 
 </body>
