--- a/USA/FED/INT/USPP.html
+++ b/USA/FED/INT/USPP.html
@@ -18,26 +18,26 @@
   </head>
   <body>
 	
-	<h1><img src="../Park/USPP/uspp-patrol-car-uspp-photo.jpg" height="300"></h1><h2>United States Park Police</h2>
+	<h1><img src="USPP/uspp-patrol-car-uspp-photo.jpg" height="300"></h1><h2>United States Park Police</h2>
 
 	The United States Park Police functions as a full-service law enforcement agency with responsibilities and jurisdiction areas primarily located in the<br>Washington, D.C., San Francisco, and New York City areas and certain other government lands. 
 
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/USPP/2c2dac0315.jpg"><img src="../Park/USPP/2c2dac0315.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USPP/2c2dac0315.jpg"><img src="USPP/2c2dac0315.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/USPP/b6db8fce49.jpg"><img src="../Park/USPP/b6db8fce49.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USPP/b6db8fce49.jpg"><img src="USPP/b6db8fce49.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/USPP/7529eb2219.jpg"><img src="../Park/USPP/7529eb2219.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USPP/7529eb2219.jpg"><img src="USPP/7529eb2219.jpg" width="90%"></a></br></div>
 	</div>
 
 	<div class="row">
 		 
-		<div class="column"><a href="../Park/USPP/SRU_52d511077a.jpg"><img src="../Park/USPP/SRU_52d511077a.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USPP/SRU_52d511077a.jpg"><img src="USPP/SRU_52d511077a.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/USPP/90c4382f1b.jpg"><img src="../Park/USPP/90c4382f1b.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USPP/90c4382f1b.jpg"><img src="USPP/90c4382f1b.jpg" width="90%"></a></br></div>
 
-		<div class="column"><a href="../Park/USPP/ed0a6939fe.jpg"><img src="../Park/USPP/ed0a6939fe.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="USPP/ed0a6939fe.jpg"><img src="USPP/ed0a6939fe.jpg" width="90%"></a></br></div>
 	</div>
 
 </body>
