--- a/USA/FED/int.html
+++ b/USA/FED/int.html
@@ -29,7 +29,7 @@
 		 </div>
 		
 		<div class="column">
-			<a href="INT/BIA.html"><img src="INT/BIA/BADGE.png" height="300"><br>Bureau of Indian Affairs (and other Tribal Police)</a><br><br>
+			<a href="INT/BIA.html"><img src="INT/BIA/BADGE.png" height="300"><br>Bureau of Indian Affairs (and similar agencies)</a><br><br>
 		</div>
 		
 	</div>
